Request to update 'his' to 'their'

--- a/docs/key-topics/security-framework/api-security.mdx
+++ b/docs/key-topics/security-framework/api-security.mdx
@@ -120,7 +120,7 @@ export default async (parent, args, context) => {
 
 When the code executes `context.security.getPermission(...)`, WSF will process the `security-authorization` hook (`3`) and return the matching permission object, if found.
 
-Same as with authentication plugins, the developer is responsible for registering authorization plugins in his project. If no plugins exist, the identity will have no permissions and won't be able to perform any operations that require authorization. To implement an authorization plugin, use the following interface:
+Same as with authentication plugins, the developer is responsible for registering authorization plugins in their project. If no plugins exist, the identity will have no permissions and won't be able to perform any operations that require authorization. To implement an authorization plugin, use the following interface:
 
 ```ts title="Authorization plugin interface"
 interface SecurityAuthorizationPlugin extends Plugin {
