Correcting the broken link
Updated the correct link provided by Pavel:
https://github.com/webiny/webiny-js/blob/c3b55cb9e7551410090a26cf09799b4c4b3627a3/packages/app-admin-cognito/src/index.tsx#L95-L102
Replaced the existing link:
https://github.com/webiny/webiny-js/blob/next/packages/app-plugin-security-cognito/src/cognito/Authenticator.ts#L111

--- a/docs/key-topics/security-framework/react-security.mdx
+++ b/docs/key-topics/security-framework/react-security.mdx
@@ -89,7 +89,7 @@ interface SecurityContextValue {
 
 The way SecurityProvider is supposed to be used is, you mount it as a parent of the component that's doing actual authentication in your application. Then, once you've logged in and obtained user information, you use the `setIdentity` method to set the identity information. That way, the rest of the application becomes immediately aware of the identity/user information and will rerender accordingly.
 
-An example of this can be found on our GitHub, in the [app-plugin-security-cognito](https://github.com/webiny/webiny-js/blob/next/packages/app-plugin-security-cognito/src/cognito/Authenticator.ts#L111) package.
+An example of this can be found on our GitHub, in the [app-plugin-security-cognito](https://github.com/webiny/webiny-js/blob/c3b55cb9e7551410090a26cf09799b4c4b3627a3/packages/app-admin-cognito/src/index.tsx#L95-L102) package.
 
 ## Performing Authorization
 
