--- a/docs/webiny-overview/intro.mdx
+++ b/docs/webiny-overview/intro.mdx
@@ -12,6 +12,6 @@ description: Webiny Serverless CMS Intro
 
 Webiny is a product of many trades and it can be used for many different use-cases, but each project is different and there are always variations in the requirements. Instead of us saying that Webiny can pretty much fit any use-case, we decided to write a series of short articles describing the main features of the product. In the end, you will have a good understanding of what you can do with Webiny, without spending hours in the code trying to build your use-case.
 
-The articles are split into two main groups, based on the 2 products that are available plus the performance benchmark. As guidance, if you’re looking at building custom applications, APIs, business logic, it’s best to start with the Serverless Application Framework. But if you’re looking for a headless CMS, page builder, or form builder, check out the [Serverless CMS](/docs/webiny-overview/serverless-cms/apps/intro) first. Finally, if you want to know how well Webiny performs, what amount of load it can take, and what are the costs involved, check out the [performance benchmark](/docs/webiny-overview/performance-benchmark/introduction) section.
+The articles are split into two main groups, based on the 2 products that are available plus the performance benchmark. As guidance, if you’re looking at building custom applications, APIs, business logic, it’s best to start with the Serverless Application Framework. But if you’re looking for a headless CMS, Page Builder, or Form Builder, check out the [Serverless CMS](/docs/webiny-overview/serverless-cms/apps/intro) first. Finally, if you want to know how well Webiny performs, what amount of load it can take, and what are the costs involved, check out the [Performance Benchmark](/docs/webiny-overview/performance-benchmark/introduction) section.
 
 Of course, we can’t describe every single feature because there are many, but if you feel these articles haven’t provided an answer for you, give us a ping on our [community Slack](https://www.webiny.com/slack) and we’ll gladly try and assist you.
