chore: add the Can I Use This section

--- a/docs/key-topics/page-builder/lifecycle-events.mdx
+++ b/docs/key-topics/page-builder/lifecycle-events.mdx
@@ -6,6 +6,10 @@ keywords: ["webiny", "Page Builder", "editor", "hooks"]
 description: Learn about Page Builder Editor hooks that are useful for building custom elements
 ---
 
+:::info Can I Use This?
+This feature is available since Webiny **v5.22.0**.
+:::
+
 :::tip What you'll learn
 
 - hooks you can use to build custom Page Builder elements
