Request to update 'webiny output' command link
In the 'Retrieving the GraphQL API URL' section, the link leads to the correct page but displays the wrong (yarn webiny disable-telemetry) command. I updated to the correct link that leads to the 'webiny output' command. 

Incorrect:
https://www.webiny.com/docs/key-topics/webiny-cli#yarn-webiny-output-folder---env-env     

Correct:            
https://www.webiny.com/docs/key-topics/webiny-cli#yarn-webiny-output---env-env

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -112,7 +112,7 @@ For more information on how to use it, revisit the [Using the Watch Command](/do
 
 ### Retrieving the GraphQL API URL
 
-Before we continue, note that in order to do a quick manual test of our GraphQL API, we need to have the URL over which it can be accessed. This is where the following [`webiny output`](/docs/key-topics/webiny-cli#yarn-webiny-output---env-env) command can help us:
+Before we continue, note that in order to do a quick manual test of our GraphQL API, we need to have the URL over which it can be accessed. This is where the following [`webiny output`](https://www.webiny.com/docs/key-topics/webiny-cli/#yarn-webiny-output-folder---env-env) command can help us:
 
 ```bash
 yarn webiny output pinterest-clone/api --env dev
