Request to update 'webiny output' link
In the FAQ section, the 'webiny output' link leads to the correct page but displays the wrong (yarn webiny disable-telemetry) command. I updated to the correct link that leads to the 'webiny output' command.

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
@@ -203,7 +203,7 @@ With all of the new stack output properties now being passed to our React applic
 
 #### Is there a way to detect whether we're deploying our React application for the first time?
 
-To determine whether the React application has been deployed or not, we can run the following [`webiny output`](/docs/key-topics/webiny-cli#yarn-webiny-output---env-env) command:
+To determine whether the React application has been deployed or not, we can run the following [`webiny output`](https://www.webiny.com/docs/key-topics/webiny-cli#yarn-webiny-output-folder---env-env) command:
 
 ```bash
 yarn webiny output pinterest-clone/app --env  --json
