Request to update links
The 'Workflows' and 'Cloud Infrastructure' links seem to be incorrect. 

Under Info, 'Workflows' links to the same page. So, I updated the link to the Workflows topic, shown below.
https://www.webiny.com/docs/key-topics/ci-cd/workflows/

Under Watch out for extra costs, 'Cloud Infrastructure' links to the same page. So, I updated the link to the correct topic, shown below.
https://www.webiny.com/docs/key-topics/cloud-infrastructure/introduction

--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -26,7 +26,7 @@ Every project most certainly has an environment called **production**. This is t
 For example, you might have multiple **development** environments, to which developers can deploy their changes, ready to be tested by the rest of the team. Once the changes have been approved, an additional round of testing can be done in a **preview**, or more commonly called, **staging** environment. This is the environment that's the closest to the **production** environment in terms of the code, different configurations, cloud infrastructure, and so on.
 
 :::info
-For best practices on how to organize your environments and other workflows, check out the [Workflows](#) section.
+For best practices on how to organize your environments and other workflows, check out the [Workflows](https://www.webiny.com/docs/key-topics/ci-cd/workflows/) section.
 :::
 
 ## Environments in a Webiny project
@@ -49,7 +49,7 @@ Note that Webiny does **not** sync environments across your project applications
 Fortunately, Webiny makes it easy to work with different environments, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi). Be sure to check out the [Deploy your project](/docs/how-to-guides/deployment/deploy-your-project) guide to learn how to deploy a Webiny project.
 
 :::danger Watch out for extra costs
-Deploying multiple project environments into the same AWS account may incur additional cost. Check out the [Cloud Infrastructure](#) section for more information.
+Deploying multiple project environments into the same AWS account may incur additional cost. Check out the [Cloud Infrastructure](https://www.webiny.com/docs/key-topics/cloud-infrastructure/introduction) section for more information.
 :::
 
 ## FAQ
