Request to update link
In the last line the 'the cloud infrastructure code' link does not work for me. If you provide the correct link, I will update it. 

Also, I replaced I18n with i18n by referring different sources:
https://en.wikipedia.org/wiki/Internationalization_and_localization
https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/i18n
https://www.npmjs.com/package/i18n

--- a/docs/key-topics/cloud-infrastructure/api/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview.mdx
@@ -48,7 +48,7 @@ For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</d
 
 #### 2. I18N
 
-The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
+The i18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
 For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
 
@@ -84,7 +84,7 @@ There are a couple of reason for that.
 
 First, implementing a GraphQL server using AWS Lambda enables us and our users to make additional customizations to server's behavior.
 
-The default Webiny applications rely on this fact as well. For example, the I18N application gives you the ability to check what is the current locale that the user is on. The Security application gives you the ability to perform custom authentication and authorization checks inside of your resolvers. Finally, it also makes it possible for the Headless CMS application to generate different GraphQL schemas, based on the current I18N locale.
+The default Webiny applications rely on this fact as well. For example, the i18N application gives you the ability to check what is the current locale that the user is on. The Security application gives you the ability to perform custom authentication and authorization checks inside of your resolvers. Finally, it also makes it possible for the Headless CMS application to generate different GraphQL schemas, based on the current i18N locale.
 
 Secondly, you can test your GraphQL server easily with Jest, as you would do with any other JavaScript piece of code.
 
