--- a/docs/key-topics/security-framework/react-security.mdx
+++ b/docs/key-topics/security-framework/react-security.mdx
@@ -36,9 +36,9 @@ Let's use the following diagram to analyze the order of operations that are goin
   alt="React Authentication and Authorization using Webiny Security Framework"
 />
 
-Once your application has started, it will render a login form (this can be your custom form or the one provided by your IdP's React SDK). A user submits his credentials to the IdP (`1`). If credentials are valid, IdP will return some basic identity information and a JWT token (`2`).
+Once your application has started, it will render a login form (this can be your custom form or the one provided by your IdP's React SDK). A user submits his credentials to the IdP (`1`). If credentials are valid, IdP will return some basic identity information and a JSON Web Token (JWT) (`2`).
 
-Now that you want to communicate with the Webiny API, you will attach that JWT token to every request you make (`3`). The Webiny API will then run the authentication process (`4`) described in the [API Security](/docs/key-topics/security-framework/api-security) article, and verify the JWT token (remember, how you implement your authentication plugin is up to you).
+Now that you want to communicate with the Webiny API, you will attach that JWT to every request you make (`3`). The Webiny API will then run the authentication process (`4`) described in the [API Security](/docs/key-topics/security-framework/api-security) article, and verify the JWT (remember, how you implement your authentication plugin is up to you).
 
 If the identity is valid and is authorized to perform the requested operation, the React application will receive the expected response from the API.
 
@@ -50,7 +50,7 @@ Once you've obtained the identity information from your IdP, you only know _who_
 
 So how do we fetch all that information?
 
-In the Admin Area application, that ships with the default Webiny project, we solve this problem by exposing a `login` GraphQL mutation. That mutation is responsible for returning user's information based on the identity obtained in the authentication process (using the JWT token). It's not a traditional login API call where you specify a username and a password. It's more of a helper that is used to provide application-related information and permissions back to the React application.
+In the Admin Area application, that ships with the default Webiny project, we solve this problem by exposing a `login` GraphQL mutation. That mutation is responsible for returning user's information based on the identity obtained in the authentication process (using the JWT). It's not a traditional login API call where you specify a username and a password. It's more of a helper that is used to provide application-related information and permissions back to the React application.
 
 :::info
 
@@ -115,4 +115,4 @@ export default () => {
 
 React applications load user permissions from the API, meaning they share the same permission objects. Handling of login is the responsibility of each individual React application and can be implemented in a number of ways, depending on your project requirements.
 
-The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your JWT token and load identity's permissions.
+The only requirement from the Webiny API is that you provide the necessary plugins to authenticate your JWT and load identity's permissions. 
