--- a/docs/release-notes/5.9.0/changelog.mdx
+++ b/docs/release-notes/5.9.0/changelog.mdx
@@ -106,7 +106,7 @@ A shoutout to [@xintellion](https://github.com/xintellion) for spotting and repo
 
 ### Fixed Serving of Non-Image Files ([#1710](https://github.com/webiny/webiny-js/pull/1710))
 
-When files are uploaded via [File Manager](https://www.webiny.com/serverless-app/file-manager/), ultimately, they must always be served to users over a CDN ([Amazon Cloudfront](https://aws.amazon.com/cloudfront/)). This was true for images, but in every other case, files would be directly served from S3, making the actual file download less optimal.
+When files are uploaded via [File Manager](https://www.webiny.com/serverless-app/file-manager/), ultimately, they must always be served to users over a CDN ([Amazon CloudFront](https://aws.amazon.com/cloudfront/)). This was true for images, but in every other case, files would be directly served from S3, making the actual file download less optimal.
 
 This has now been taken care of. Whenever possible, all types of files will be served from a CDN.
 
