Updated 'Cloudfront' to 'CloudFront'
Source: https://aws.amazon.com/cloudfront/

--- a/docs/release-notes/5.4.0/changelog.mdx
+++ b/docs/release-notes/5.4.0/changelog.mdx
@@ -61,4 +61,4 @@ The reason behind this is that, although a new production build has just been up
 
 So, from now on, after the **Website** project application's React application has been successfully deployed, a separate background process will be triggered, that will ensure all of the existing pages are re-rendered.
 
-Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the [Amazon Cloudfront](https://aws.amazon.com/cloudfront/) and its caching settings.
+Once successfully deployed, please note that it can take a couple of minutes for the website to be fully updated. This is mainly because of the [Amazon CloudFront](https://aws.amazon.com/cloudfront/) and its caching settings.
