--- a/docs/how-to-guides/integrations/integrate-tailwindcss.mdx
+++ b/docs/how-to-guides/integrations/integrate-tailwindcss.mdx
@@ -9,6 +9,7 @@ description: Learn how to integrate tailwindcss in your Webiny project.
 :::tip What you'll learn
 
 - how to integrate Tailwind CSS in your Webiny project
+
 :::
 
 ## Overview
@@ -25,14 +26,12 @@ The code that we will cover in this guide can also be found in our GitHub [examp
 ## Setting Up Tailwind CSS
 
 ### Install Tailwind CSS via Yarn
+
 Install `tailwindcss` package and its peer-dependencies using yarn, by running the following command from root of your project:
 
 ```
-yarn add -D tailwindcss@npm:@tailwindcss/postcss7-compat@^2.1.2 postcss@^7 autoprefixer@^9
+yarn add -D tailwindcss postcss autoprefixer
 ```
-:::info
-Webiny currently uses [Webpack 4](https://v4.webpack.js.org/) which doesn't support PostCSS 8 yet. So, we'll need to install the [Tailwind CSS v2.0 PostCSS 7 compatibility](https://tailwindcss.com/docs/installation#post-css-7-compatibility-build) build for now as shown above.
-:::
 
 ### Add Tailwind CSS to Webpack Configuration
 
@@ -43,41 +42,39 @@ But, you can use the same approach for other Webiny applications or a custom app
 Learn more about project applications and packages in the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) key topic.
 :::
 
-We need to add the Tailwind CSS to the `postcss` plugins inside the Webpack configuration of the application.
+We need to add the Tailwind CSS to the `postcss-loader` plugins inside the Webpack configuration. Every package in a Webiny application has a `webiny.config.ts` file that exports development-related commands. In case of **Website** (`apps/website/code/webiny.config.ts`), it contains the following commands:
 
-Every package in a Webiny application has a `webiny.config.ts` file that exports the often used development-related commands.
-
-In case of **Website** `(apps/website)`, it contains the following commands:
 - `watch` to watch the application
 - `build` to build the application
 
-Let's take a brief look at the file content:
+Let's take a brief look at the file contents:
 
 ```js title="apps/website/code/webiny.config.ts"
 const { createWatchApp, createBuildApp } = require("@webiny/project-utils");
 // Some code is removed for the sake of brevity.
 
 module.exports = {
-    commands: {
-        async watch(options) {
-            (...)
+  commands: {
+    async watch(options) {
+      // ...
 
-            // Starts local application development.
-            const watch = createWatchApp({ cwd: __dirname });
-            await watch(options);
-        },
-        async build(options) {
-            (...)
+      // Starts local application development.
+      const watch = createWatchApp({ cwd: __dirname });
+      await watch(options);
+    },
+    async build(options) {
+      // ...
 
-            // Creates a production build of your application, ready to be deployed to
-            // a hosting provider of your choice, for example Amazon S3.
-            const build = createBuildApp({ cwd: __dirname });
-            await build(options);
-        }
+      // Creates a production build of your application, ready to be deployed to
+      // a hosting provider of your choice, for example Amazon S3.
+      const build = createBuildApp({ cwd: __dirname });
+      await build(options);
     }
+  }
 };
 ```
-As we can see in the above file, we export an object with `commands.watch` and `commands.build` functions, where we use the `createWatchApp` and `createBuildApp` helper functions, imported from the `@webiny/project-utils` package.
+
+As we can see in the code above, we export an object with `commands.watch` and `commands.build` functions, where we use the `createWatchApp` and `createBuildApp` helper functions, imported from the `@webiny/project-utils` package.
 
 Both functions accept the optional `overrides` property. This is where we'll assign the necessary Webpack overrides, by assigning a simple callback function to its `webpack` property.
 
@@ -86,37 +83,37 @@ import { createWatchApp, createBuildApp } from "@webiny/project-utils";
 // Some code is removed for the sake of brevity.
 
 export default {
-    commands: {
-        async watch(options) {
-            // (...)
+  commands: {
+    async watch(options) {
+      // // ...
 
-            // Starts local application development.
-            const watch = createWatchApp({
-                cwd: __dirname,
-                overrides: {
-                    webpack(config) {
-                        return require("./applyTailwindToWebpack")(config);
-                    }
-                }
-            });
-            await watch(options);
-        },
-        async build(options, context) {
-            // (...)
-
-            // Creates a production build of your application, ready to be deployed to
-            // a hosting provider of your choice, for example Amazon S3.
-            const build = createBuildApp({
-                cwd: __dirname,
-                overrides: {
-                    webpack(config) {
-                        return require("./applyTailwindToWebpack")(config);
-                    }
-                }
-            });
-            await build(options);
+      // Starts local application development.
+      const watch = createWatchApp({
+        cwd: __dirname,
+        overrides: {
+          webpack(config) {
+            return require("./applyTailwindToWebpack")(config);
+          }
         }
+      });
+      await watch(options);
+    },
+    async build(options, context) {
+      // // ...
+
+      // Creates a production build of your application, ready to be deployed to
+      // a hosting provider of your choice, for example Amazon S3.
+      const build = createBuildApp({
+        cwd: __dirname,
+        overrides: {
+          webpack(config) {
+            return require("./applyTailwindToWebpack")(config);
+          }
+        }
+      });
+      await build(options);
     }
+  }
 };
 ```
 
@@ -136,17 +133,20 @@ const { traverseLoaders } = require("@webiny/project-utils");
  * A helper function to modify Webpack config.
  */
 module.exports = config => {
-    /**
-     * Traverse all loaders, find `postcss-loader`, and overwrite plugins.
-     */
-    traverseLoaders(config.module.rules, loader => {
-        // `loader` can also be a string, so check for `.loader` property.
-        if (loader.loader && loader.loader.includes("postcss-loader")) {
-            loader.options.plugins = [...loader.options.plugins(), tailwindcss()];
-        }
-    });
+  /**
+   * Traverse all loaders, find `postcss-loader`, and overwrite plugins.
+   */
+  traverseLoaders(config.module.rules, loader => {
+    // `loader` can also be a string, so check for `.loader` property.
+    if (loader.loader && loader.loader.includes("postcss-loader")) {
+      loader.options.postcssOptions.plugins = [
+        ...loader.options.postcssOptions.plugins(),
+        tailwindcss()
+      ];
+    }
+  });
 
-    return config;
+  return config;
 };
 ```
 
@@ -154,12 +154,12 @@ Here we export a helper function that modifies Webpack configuration.
 It takes `config` as the single argument and returns the new configuration after making some modifications to it.
 
 Inside that function, we use [`traverseLoaders`](https://github.com/webiny/webiny-js/blob/next/packages/project-utils/traverseLoaders.js) helper function that we require from `@webiny/project-utils` package.
-It traverses all the loaders defined in `modules.rules` property of the Webpack configuration and passes each one of them to your callback.
-You can then apply your modifications. In our case, we add Tailwind CSS plugins to the [`postcss-loader`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/code/applyTailwindToWebpack.js#L13).
+It traverses all the loaders defined in `modules.rules` property of the Webpack configuration and passes each one of them to your callback. You can then apply your modifications. In our case, we add Tailwind CSS plugins to the [`postcss-loader`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/code/applyTailwindToWebpack.js#L13).
 
 Now that we have added Tailwind CSS to Webpack configuration, let's move on to the next step.
 
 ### Create Your Tailwind CSS Configuration File
+
 Next, generate your `tailwind.config.js` file. From the root of your project run the following command:
 
 ```
@@ -167,38 +167,57 @@ npx tailwindcss init
 ```
 
 :::note
-We have created the [`tailwind.config.js`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/tailwind.config.js) file in the root of Webiny project so that we can share it across all Webiny applications,
-for example, `apps/admin` and `apps/website`.
+We've created the [`tailwind.config.js`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/tailwind.config.js) file in the root of Webiny project so that we can share it across all Webiny applications,
+for example, `apps/admin` and `apps/website`. But we also need it there because of different current working directories, explained further in the article.
 :::
 
 This creates a minimal [`tailwind.config.js`](https://github.com/webiny/webiny-examples/blob/master/integrate-tailwind-css/tailwind.config.js) file at the root of your project:
 
 ```js title="tailwind.config.js"
 module.exports = {
-  purge: [],
-  darkMode: false, // or 'media' or 'class'.
+  content: [],
   theme: {
-    extend: {},
+    extend: {}
   },
-  variants: {
-    extend: {},
+  plugins: []
+};
+```
+
+**Here comes the important part**: we need to configure the `content` property to point to files that _can_ contain TailwindCSS classes, so that Tailwind can generate the minimal CSS output based on those classes only. When running the Webiny CLI, some commands are executed from the root of the project, and the current working directory (CWD) is the root of the project, and some commands will be executed from the app folders, and so the CWD will be different. Because of that, we need to define the `content` paths accordingly.
+
+In the root `tailwind.config.js` file, define the `content` property like so:
+
+```js title="tailwind.config.js"
+module.exports = {
+  content: ["./apps/website/code/public/*.html", "./apps/website/code/src/**/*.tsx"],
+  theme: {
+    extend: {}
   },
-  plugins: [],
-}
+  plugins: []
+};
 ```
 
 :::info
 Learn more about configuring Tailwind in the [configuration documentation](https://tailwindcss.com/docs/configuration).
 :::
 
-Now that we have this global configuration, let's use it in the **Website** `(apps/website)` React application by creating a `tailwind.config.js` file in `apps/website/code` directory as shown below:
+Now that we have this global configuration, let's use it in the **Website** `(apps/website)` React application by creating a `tailwind.config.js` file in `apps/website/code` directory, and override the `content` property to make the paths relative to the location of that file:
 
 ```js title="apps/website/code/tailwind.config.js"
 // Import config from the project root.
-module.exports = require("../../../tailwind.config");
+const rootConfig = require("../../../tailwind.config");
+
+module.exports = {
+  ...rootConfig,
+  // Override paths to be relative to this file
+  content: ["./public/*.html", "./src/**/*.tsx"]
+};
 ```
 
+With this, we make sure that TailwindCSS is able to figure out the files it needs to process for both `watch` and `deploy` commands, which internally use different current working directories.
+
 ### Include Tailwind CSS in Your SCSS
+
 Now it's time to include the Tailwind CSS directives in your styles.
 As most of the styles for Webiny applications are present in `apps/theme` package, we also include Tailwind CSS styles there.
 
@@ -208,10 +227,10 @@ Open the `apps/theme/styles.scss` file that exports all theme styles and use the
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-(...)
+// ...
 ```
 
-Tailwind CSS swaps these directives out at build-time with all of the styles it generates based on your configured design system.
+Tailwind CSS swaps these directives out at build-time with all the styles it generates based on your configured design system.
 
 That's all! Now, when you start your **Website** `(apps/website)` React application locally, by running:
 
@@ -224,6 +243,7 @@ Or build it (which happens automatically for you when you deploy your applicatio
 ```
 yarn webiny deploy apps/website --env {environment}
 ```
+
 Tailwind CSS is ready to use in your Webiny project.
 
 ### Use Tailwind CSS in Website
@@ -234,58 +254,58 @@ Now that we've completed the above steps, let's try adding an example section ma
 import React from "react";
 
 const ExampleMadeWithTailiwindCSS = () => {
-    return (
-        <div className="mt-12 -mb-12 bg-gray-50">
-            <div className="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-                <h2 className="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    <span className="block">Ready to dive in?</span>
-                    <span className="block text-purple-600">Start your free trial today.</span>
-                </h2>
-                <div className="mt-8 flex lg:mt-0 lg:flex-shrink-0">
-                    <div className="inline-flex rounded-md shadow">
-                        <a
-                            href="#"
-                            className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-purple-600 hover:bg-purple-700"
-                        >
-                            Get started
-                        </a>
-                    </div>
-                    <div className="ml-3 inline-flex rounded-md shadow">
-                        <a
-                            href="#"
-                            className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-purple-600 bg-white hover:bg-indigo-50"
-                        >
-                            Learn more
-                        </a>
-                    </div>
-                </div>
-            </div>
+  return (
+    <div className="mt-12 -mb-12 bg-gray-50">
+      <div className="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+        <h2 className="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+          <span className="block">Ready to dive in?</span>
+          <span className="block text-purple-600">Start your free trial today.</span>
+        </h2>
+        <div className="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+          <div className="inline-flex rounded-md shadow">
+            <a
+              href="#"
+              className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-purple-600 hover:bg-purple-700"
+            >
+              Get started
+            </a>
+          </div>
+          <div className="ml-3 inline-flex rounded-md shadow">
+            <a
+              href="#"
+              className="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-purple-600 bg-white hover:bg-indigo-50"
+            >
+              Learn more
+            </a>
+          </div>
         </div>
-    )
-}
+      </div>
+    </div>
+  );
+};
 
 export default ExampleMadeWithTailiwindCSS;
 ```
+
 For demonstration purposes, let's render our newly created React component inside the `App` component:
 
 ```tsx title="apps/website/code/src/App.tsx" {3,9}
 import React from "react";
-(...)
+// ...
 import ExampleMadeWithTailiwindCSS from "./ExampleMadeWithTailwindCSS";
 
 export const App = () => (
-    <ApolloProvider client={createApolloClient()}>
-        <BrowserRouter basename={process.env.PUBLIC_URL}>
-            <PageBuilderProvider>
-                <ExampleMadeWithTailiwindCSS />
-                <Switch>
-                    <Route path={"*"} component={Page} />
-                </Switch>
-            </PageBuilderProvider>
-        </BrowserRouter>
-    </ApolloProvider>
+  <ApolloProvider client={createApolloClient()}>
+    <BrowserRouter basename={process.env.PUBLIC_URL}>
+      <PageBuilderProvider>
+        <ExampleMadeWithTailiwindCSS />
+        <Switch>
+          <Route path={"*"} component={Page} />
+        </Switch>
+      </PageBuilderProvider>
+    </BrowserRouter>
+  </ApolloProvider>
 );
-
 ```
 
 If we did everything correctly, at the top of the page, we should be able to see the new section we just created:
@@ -300,7 +320,6 @@ If we did everything correctly, at the top of the page, we should be able to see
 
 <!-- vale on -->
 
-
 ## FAQ
 
 #### Can I include Tailwind CSS directives in Website `(app/website)` React application directly?
@@ -309,7 +328,3 @@ Yes, you can include the directives directly in the main style file of your Reac
 you can directly add the directives to `(apps/website/code/src/App.scss)` file for the **Website** application.
 
 We chose to include it in the `apps/theme` package for guide because it's being used in all React applications of a Webiny project. As a result, we don't have to include these directives in every React application.
-
-#### Why are we not using Webpack v5 in a Webiny project?
-
-We are working on the [Webpack upgrade](https://github.com/webiny/webiny-js/pull/1590).
