docs: fixed typo

--- a/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
@@ -66,5 +66,5 @@ All the form details, from the layout, fields, validators, terms of service to s
 
 ## When to consider using the Form Builder
 
-Form Builder Is great when you have single-step forms. Your typical sales forms, contact us forms, support forms, and similar. Where the Form Builder is not a recommended solution would be for the survey or multi-step forms. It’s one we haven’t yet developed but might come in the future.
+Form Builder is great when you have single-step forms. Your typical sales forms, contact us forms, support forms, and similar. Where the Form Builder is not a recommended solution would be for the survey or multi-step forms. It’s one we haven’t yet developed but might come in the future.
 
