docs: fixed the URL

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -37,7 +37,7 @@ The best way to start building a new custom application would be to use the [Ful
 
 ### GraphQL API
 
-A new GraphQL API created within a new [project application](/docs/key-topics/project-organization/project-applications-and-packages) in our Webiny project (more information below). Once deployed, we will use the [Extend GraphQL API](https://www.webiny.com/docs/how-to-guides/scaffolding/extend-graphql-api/) scaffold to extend it, meaning, create new GraphQL types, queries, and mutations.
+A new GraphQL API created within a new [project application](/docs/key-topics/project-organization/project-applications-and-packages) in our Webiny project (more information below). Once deployed, we will use the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api/) scaffold to extend it, meaning, create new GraphQL types, queries, and mutations.
 
 Speaking of deployment, note that we'll need to deploy the newly created GraphQL API before jumping to React application development, simply because the React application relies on it. This is also something the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold will warn us about, and will offer to do it for us.
 
