feat: warning about ts in 5.24.0

--- a/docs/release-notes/5.24.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.24.0/upgrade-guide.mdx
@@ -27,6 +27,12 @@ yarn up "@webiny/*@5.24.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.24.0`.
 
+:::warning
+Because we are upgrading Typescript rules to get the project to the strict mode, there might be some build issues in your existing projects.
+
+We do not change your projects `tsconfig.json` file with this upgrade. If you want to make it stricter, you will need to add stricter compiler option rules to that file.
+:::
+
 ## 2. Deploy Your Project
 
 Proceed by re-deploying your Webiny project:
