--- a/docs/release-notes/5.24.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.24.0/upgrade-guide.mdx
@@ -13,7 +13,6 @@ description: Learn how to upgrade Webiny from 5.23.1 to 5.24.0.
 :::
 
 :::info
-This Webiny upgrade only requires an update of `npm` packages.
 Make sure to check out the [5.24.0 changelog](/docs/release-notes/5.24.0/changelog) to get familiar with the changes introduced in this release.
 :::
 
@@ -28,9 +27,9 @@ yarn up "@webiny/*@5.24.0"
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.24.0`.
 
 :::warning
-Because we are upgrading Typescript rules to get the project to the strict mode, there might be some build issues in your existing projects.
+As we mentioned in the changelog, we're in the process of tightening the Typescript rules, making it stricter, and improving the code quality. Because of that, there is a possibility of some build issues in your existing projects, if you have a non-default setup or custom plugins.
 
-We do not change your projects `tsconfig.json` file with this upgrade. If you want to make it stricter, you will need to add stricter compiler option rules to that file.
+To minimize the impact of TS strictness, we are _NOT CHANGING_ your existing `tsconfig.json` configuration. If you want to use stricter rules, you'll have to enable them yourself.  
 :::
 
 ## 2. Deploy Your Project
