docs: fixed various typos and broken link Credits: Thanks to @pradeephubgit for his contributions

--- a/src/pages/docs/core-development-concepts/basics/project-deployment.mdx
+++ b/src/pages/docs/core-development-concepts/basics/project-deployment.mdx
@@ -197,7 +197,7 @@ yarn webiny pulumi api --env prod -- stack export
 
 <Alert type="info">
 
-Learn more about cloud infrastructure state files in the [Cloud Infrastructure State Files](#) development workflows guide.
+Learn more about cloud infrastructure state files in the [Cloud Infrastructure State Files](../../core-development-concepts/ci-cd/cloud-infrastructure-state-files) development workflows guide.
 
 </Alert>
 
