--- a/src/pages/docs/core-development-concepts/scaffolding/extend-graphql-api.mdx
+++ b/src/pages/docs/core-development-concepts/scaffolding/extend-graphql-api.mdx
@@ -92,7 +92,7 @@ Note that if you prefer a different library, like for example the [DynamoDB Docu
 
 By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
 
-The generated application code follows the same idea. There aren't any additional steps that you need to takefyo in order to enable multi-locale support.
+The generated application code follows the same idea. There aren't any additional steps that you need to take in order to enable multi-locale support.
 
 ### Testing Setup
 
@@ -220,7 +220,7 @@ You are free to create new tests in the similar fashion, or amend the existing o
 
 ### How does security (authentication and authorization) work?
 
-Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
+Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behavior.
 
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](../../admin-area/new-app-tutorial/security) to learn how to implement these on your own.
 
