--- a/src/pages/docs/custom-app-tutorial/graphql-api/create-a-graphql-api.mdx
+++ b/src/pages/docs/custom-app-tutorial/graphql-api/create-a-graphql-api.mdx
@@ -45,7 +45,7 @@ For now, we won't be dealing with security and the file upload functionality. We
 
 In general, a GraphQL API can be extended in two ways.
 
-A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.18.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the the [Extend GraphQL API](../../core-development-concepts/extending-and-customizing/extend-graphql-api) guide.
+A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.18.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the [Extend GraphQL API](../../core-development-concepts/extending-and-customizing/extend-graphql-api) guide.
 
 On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API scaffold](../../core-development-concepts/scaffolding/extend-graphql-api), which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, creates sample tests, and more.
 
