--- a/src/pages/docs/custom-app-tutorial/securing-graphql-api/initial-setup.mdx
+++ b/src/pages/docs/custom-app-tutorial/securing-graphql-api/initial-setup.mdx
@@ -153,7 +153,7 @@ export const handler = createHandler({
 });
 ```
 
-As we can see, via the [`authenticationPlugins`](#) and [`authenticateUsingHttpHeader`](#) function calls, we're first registering the plugins that set up the authentication layer. No additional configuration parameters need to be passed here.
+As we can see, via the [`authenticationPlugins`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/05-graphql-api/01-initial-setup/pinterest-clone/api/code/graphql/src/index.ts#L18) and [`authenticateUsingHttpHeader`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/05-graphql-api/01-initial-setup/pinterest-clone/api/code/graphql/src/index.ts#L19) function calls, we're first registering the plugins that set up the authentication layer. No additional configuration parameters need to be passed here.
 
 Then, via the [`cognitoAuthenticationPlugins`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/05-graphql-api/01-initial-setup/pinterest-clone/api/code/graphql/src/index.ts#L24) function call, we're registering another set of plugins that will essentially enable us to perform authentication against Amazon Cognito and the User Pool we've defined in a [previous section](../../custom-app-tutorial/adding-user-pools/adding-user-pool-and-user-pool-domain).
 
