--- a/src/pages/docs/overview/applications/form-builder.mdx
+++ b/src/pages/docs/overview/applications/form-builder.mdx
@@ -13,7 +13,7 @@ import { Alert } from '@/components/Alert'
 
 ![Webiny CMS - Form Builder](./assets/webiny-form-builder.jpg)
 
-The form builder allows you to build forms using a simple drag&drop editor. You can control the form layout, list of inputs, and their validation rules.
+The Form Builder allows you to build forms using a simple drag&drop editor. You can control the form layout, list of inputs, and their validation rules.
 
 ## Features
 
@@ -67,4 +67,4 @@ All the form details, from the layout, fields, validators, terms of service to s
 
 ## When to consider using the Form Builder
 
-Form builder Is great when you have single-step forms. Your typical sales forms, contact us forms, support forms, and similar. Where the Form Builder is not a recommended solution would be for the survey or multi-step forms. It’s one we haven’t yet developed but might come in the future.
+Form Builder is great when you have single-step forms. Your typical sales forms, contact us forms, support forms, and similar. Where the Form Builder is not a recommended solution would be for the survey or multi-step forms. It’s one we haven’t yet developed but might come in the future.
