--- a/src/pages/docs/overview/introduction.mdx
+++ b/src/pages/docs/overview/introduction.mdx
@@ -89,7 +89,7 @@ To learn more, please look at the Tools and Libraries key topic.
 
 ## Contributing
 
-We welcome anyone who wishes to be a part of our project and help us achieve our mission. If you're looking at code contributions, check [this link](https://github.com/webiny/webiny-js/blob/next/docs/CONTRIBUTING.md); for documentation contribution, check [this one](https://github.com/webiny/docs.webiny.com). If you want to have a chat with the dev team, you'll find us on our [community slack](https://www.webiny.com/slack).
+We welcome anyone who wishes to be a part of our project and help us achieve our mission. If you're looking at code contributions, check [this link](https://github.com/webiny/webiny-js/blob/next/docs/CONTRIBUTING.md); For documentation contribution, check [this one](https://github.com/webiny/docs.webiny.com). If you want to have a chat with the dev team, you'll find us on our [community slack](https://www.webiny.com/slack).
 
 ## Staying Informed
 
