docs: updated code references to extend GraphQL API as per the new pattern

--- a/src/pages/docs/headless-cms/extending/extend-graphql-api.mdx
+++ b/src/pages/docs/headless-cms/extending/extend-graphql-api.mdx
@@ -38,7 +38,7 @@ Creating the new `listMyPosts` query can be achieved via a single [`GraphQLSchem
 ```ts api/code/headlessCMS/src/plugins/posts.ts
 import { GraphQLSchemaPlugin } from '@webiny/handler-graphql/plugins'
 import { ListResponse } from '@webiny/handler-graphql/responses'
-import { CmsContentEntry, CmsContentEntryMeta } from '@webiny/api-headless-cms/types'
+import { CmsEntry, CmsEntryMeta } from '@webiny/api-headless-cms/types'
 
 // Make sure to import the `Context` interface and pass it to the `GraphQLSchemaPlugin`
 // plugin. Apart from making your application code type-safe, it will also make the
@@ -62,12 +62,12 @@ export default [
           const { security, cms } = context
 
           // Retrieve the `post` model.
-          const model = await cms.models.get('post')
+          const model = await cms.getModel('post')
 
-          // Use the `cms.entries.listLatest` method to fetch latest entries for the currently
+          // Use the `cms.listLatestEntries` method to fetch latest entries for the currently
           // logged in user. Note that you could also use the `listPublished` method here instead
-          // of `cms.entries.listLatest`, if a list of published posts is what you need.
-          const response: [CmsContentEntry[], CmsContentEntryMeta] = await cms.entries.listLatest(
+          // of `cms.listLatestEntries`, if a list of published posts is what you need.
+          const response: [CmsEntry[], CmsEntryMeta] = await cms.listLatestEntries(
             model,
             {
               where: {
