docs: changelog for source maps and graphql stacktrace support

--- a/docs/release-notes/5.24.0/changelog.mdx
+++ b/docs/release-notes/5.24.0/changelog.mdx
@@ -44,3 +44,15 @@ Some of our users reported the need to update the file URL prefix for various re
 ### Typescript Improvements
 
 We're preparing Webiny for switching to Typescript's `strict` mode. This will greatly improve the quality of all the code written in the future. However, as Webiny went from Vanilla JS, to Flow, to Typescript over the years, there's a lot of work to be done on this front. The efforts are mainly lead by our [Bruno Zoric](https://github.com/brunozoric), who invested tremendous effort into making `strict` mode a reality. There's still a lot of cleanup to do by the rest of the team, but `strict` mode will land in one of the upcoming releases :tada: :rocket:.
+
+### Source map support
+
+All of our packages will now have source maps generated. That will greatly help debugging issues.
+We have also added source map support for all lambda functions.
+It's enabled by default, but you can disable it by adding `sourceMaps: false` to `createBuildFunction` inside your lambdas' `webiny.config.ts` file.
+
+### GraphQL errors include stacktrace
+
+We've added a new stacktrace field (namely `stack`) to errors returned from GraphQL API for a better debugging experience.
+This behavior is optional and needs to be enabled by passing `DEBUG=true` environmental variable (for example to your `.env` file).
+For best experience it requires source maps to be enabled.
