chore(headless-cms): add rich-text-renderer guide

--- a/src/pages/docs/headless-cms/integrations/nextjs.mdx
+++ b/src/pages/docs/headless-cms/integrations/nextjs.mdx
@@ -230,6 +230,28 @@ export default function Post({ post, morePosts, preview }) {
 }
 ```
 
+## Rendering rich text fields
+
+You may have noticed that we chose a `rich-text` field for the **body** of the post. To render this in React, you can use [our rich text renderer package](https://www.npmjs.com/package/@webiny/react-rich-text-renderer):
+
+```bash
+npm install @webiny/react-rich-text-renderer
+```
+
+Once the package is installed, you can use it as you would any other component:
+
+```javascript
+// import the renderer
+import { RichTextRenderer }
+
+// in your render function
+<RichTextRenderer data={content} />
+```
+
+It's entirely possible to make your own renderer. If you open that package you'll see how we have done it, you can copy that code and modify it as you wish.
+
+[For more information about the rich text renderer package, see this documentation](/docs/headless-cms/extending/render-rich-text-content)
+
 
 
 ## Using NextJS preview mode
